# DPS

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  ColorRepository.cs  ConfigureService.cs  ConfigureServices.cs  DPS.csproj  Program.cs  appsettings.Development.json  appsettings.json  build.gradle.kts  docker-compose.yml  migrate.sql
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Database/: Connection.cs  DataContext.cs  DatabaseRegistry.cs
Models/: Element.cs  Loading.cs  Material.cs  Node.cs
Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Index.cshtml.css  Privacy.cshtml.cs  _ViewImports.cshtml
Pages/Shared/: _Layout.cshtml
Properties/: launchSettings.json
app/wwwroot/: DPS.styles.css
gradle/wrapper/: gradle-wrapper.properties
include/: command.h  compare.h  config.h  game.h  gif.h  handler.h  lift.h  matrix.h  shared.h  socket.h  utils.h
lab6/: build.gradle.kts  settings.gradle.kts
lab6/shared/: build.gradle.kts
lab6/shared/proto/: cell.idl
lib/lodepng/: CMakeLists.txt
lib/lodepng/include/: lodepng.h
lib/lodepng/src/: lodepng.c
membrane_mpi/: Cargo.toml
membrane_mpi/libheatmap/: Cargo.toml  build.rs
membrane_mpi/libheatmap/src/: heatmap.rs  lib.rs
membrane_mpi/src/: config.rs  draw.rs  main.rs  matrix.rs
report/: main.tex
report/images/: lab4_blockscheme  lab4_processes
report/src/: bibl.tex  content.tex  packages.tex  scripts.tex  title.tex  user_info.tex
src/: client.c  command.c  config.c  game.c  handler.c  lift.c  main.c  matrix.c  server.c  shared.c  socket.c
(+14 files in other folders)
