[package]
name = "membrane_mpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = "0.6.0"
stable-id-traits = "0.2.0"
libheatmap = { path = "libheatmap" }
lodepng = "3.7.2"
gif = "0.12.0"
indicatif = "0.17.4"
